Fix user level image stretching.

--- a/public/browserapp/css/src/machinimareload.less
+++ b/public/browserapp/css/src/machinimareload.less
@@ -265,6 +265,10 @@
                 #sayso-user-profile-column-right {
                     #sayso-user-profile-level{
                         height: 60px;
+
+                        #sayso-user-profile-level-image {
+                            width: 60px;
+                        }
                     }
                 }
 
